<resources>
    <string name="app_name">Book Tracker App</string>

    <string name="btn_continue">Continue</string>
    <string name="btn_go">Go</string>
    <string name="btn_add">ADD</string>
    <string name="btn_update">UPDATE</string>
    <string name="btn_delete">DELETE</string>
    <string name="btn_open_map">Find nearby bookstore</string>

    <string name="my_library">My Library</string>
    <string name="book_title">The thorn birds</string>
    <string name="book_author">Colleen McCullough</string>

    <string name="tv_title">Title</string>
    <string name="tv_status">Status</string>
    <string name="tv_curr_page">Current Page</string>
    <string name="tv_note">Note</string>
    <string name="tv_progress">Progress</string>

    <string-array name="status">
        <item>To read</item>
        <item>Reading</item>
        <item>Read</item>
    </string-array>

    <string name="status_reading">Reading</string>

    <string name="tv_rating">Rating</string>
    <string name="tv_pages">Pages</string>
    <string name="tv_lang">Language</string>

    <string name="tv_ex_rating">4.5</string>
    <string name="tv_ex_pages">692</string>
    <string name="tv_ex_curr_pages">344</string>
    <string name="tv_ex_lang">Eng</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


</resources>