<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/search_city_name_fragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginLeft="30dp"
    android:layout_marginTop="170dp"
    android:layout_marginRight="30dp"
    android:layout_marginBottom="55dp"
    android:background="@drawable/fragment_bgr"
    android:elevation="2dp"
    tools:context=".AddBookFragment">

    <RelativeLayout
        android:id="@+id/frag_Rlayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingLeft="30dp"
        android:paddingTop="30dp"
        android:paddingRight="30dp"
        android:paddingBottom="15dp">

        <RelativeLayout
            android:id="@+id/frag_Rlayout_title_update"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/tv_title_update"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_semibold"
                android:text="@string/tv_title"
                android:textColor="@color/fragment_text_color"
                android:textSize="25sp" />

            <TextView
                android:id="@+id/tv_title_content_update"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tv_title_update"
                android:fontFamily="@font/poppins_semibold"
                android:text="@string/book_title"
                android:textColor="@color/color_primary"
                android:textSize="32sp" />

        </RelativeLayout>

        <LinearLayout
            android:id="@+id/Llayout_status_update"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/frag_Rlayout_title_update"
            android:layout_marginTop="25dp"
            android:weightSum="3">

            <TextView
                android:id="@+id/tv_status_update"
                android:layout_width="103dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:fontFamily="@font/poppins_semibold"
                android:text="@string/tv_status"
                android:textColor="@color/fragment_text_color"
                android:textSize="25sp" />

            <Spinner
                android:id="@+id/frag_spinner"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:background="@color/bgr_color"
                android:entries="@array/status"
                android:spinnerMode="dropdown"
                android:theme="@style/SpinnerTheme" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/Llayout_curr_page_update"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/Llayout_status_update"
            android:layout_marginTop="25dp"
            android:weightSum="2">

            <TextView
                android:id="@+id/tv_curr_page_update"
                android:layout_width="184dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:fontFamily="@font/poppins_semibold"
                android:text="@string/tv_curr_page"
                android:textColor="@color/fragment_text_color"
                android:textSize="25sp" />

            <RelativeLayout
                android:id="@+id/frag_Rlayout_curr_page"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingTop="5dp">

                <androidx.cardview.widget.CardView
                    android:id="@+id/frag_cardView_curr_page"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/bgr_color">

                    <EditText
                        android:id="@+id/frag_editText_curr_page"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/poppins_medium"
                        android:gravity="center"
                        android:inputType="number"
                        android:paddingLeft="30dp"
                        android:paddingTop="7dp"
                        android:paddingRight="30dp"
                        android:paddingBottom="5dp"
                        android:text="@string/tv_ex_curr_pages"
                        android:textColor="@color/color_primary"
                        android:textSize="22sp" />
                </androidx.cardview.widget.CardView>
            </RelativeLayout>
        </LinearLayout>

        <Button
            android:id="@+id/btn_add"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/Llayout_curr_page_update"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="30dp"
            android:backgroundTint="@color/color_primary"
            android:fontFamily="@font/poppins_semibold"
            android:paddingLeft="35dp"
            android:paddingTop="8dp"
            android:paddingRight="35dp"
            android:paddingBottom="5dp"
            android:text="@string/btn_add"
            android:textColor="@color/bgr_color"
            android:textSize="16sp" />
    </RelativeLayout>

</FrameLayout>