<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity.AddBookActivity">

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="521dp"
        android:layout_height="463dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="336dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/untitled_design__3_" />

    <RelativeLayout
        android:id="@+id/Rlayout_add_book"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        android:layout_marginTop="32dp"
        android:background="@drawable/add_bgr"
        android:orientation="vertical"
        android:paddingLeft="30dp"
        android:paddingTop="30dp"
        android:paddingRight="30dp"
        android:paddingBottom="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints">

        <RelativeLayout
            android:id="@+id/Rlayout_title_add"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/tv_title_add"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_semibold"
                android:text="@string/tv_title"
                android:textColor="@color/fragment_text_color"
                android:textSize="25sp" />

            <TextView
                android:id="@+id/tv_title_content_add"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tv_title_add"
                android:fontFamily="@font/poppins_semibold"
                android:text="@string/book_title"
                android:textColor="@color/color_primary"
                android:textSize="32sp" />

        </RelativeLayout>

        <LinearLayout
            android:id="@+id/Llayout_status_add"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/Rlayout_title_add"
            android:layout_marginTop="25dp"
            android:weightSum="3">

            <TextView
                android:id="@+id/tv_status_add"
                android:layout_width="103dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:fontFamily="@font/poppins_semibold"
                android:text="@string/tv_status"
                android:textColor="@color/fragment_text_color"
                android:textSize="25sp" />

            <Spinner
                android:id="@+id/spinner_add"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:background="@color/bgr_color"
                android:spinnerMode="dropdown"
                android:theme="@style/SpinnerTheme" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/Llayout_curr_page_add"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/Llayout_status_add"
            android:layout_marginTop="25dp"
            android:weightSum="2">

            <TextView
                android:id="@+id/tv_curr_page_add"
                android:layout_width="184dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:fontFamily="@font/poppins_semibold"
                android:text="@string/tv_curr_page"
                android:textColor="@color/fragment_text_color"
                android:textSize="25sp" />

            <RelativeLayout
                android:id="@+id/Rlayout_curr_page_add"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingTop="5dp">

                <androidx.cardview.widget.CardView
                    android:id="@+id/cardView_curr_page_add"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/bgr_color">

                    <EditText
                        android:id="@+id/editText_curr_page_add"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/poppins_medium"
                        android:gravity="center"
                        android:inputType="number"
                        android:paddingLeft="30dp"
                        android:paddingTop="7dp"
                        android:paddingRight="30dp"
                        android:paddingBottom="5dp"
                        android:textColor="@color/color_primary"
                        android:textSize="22sp" />
                </androidx.cardview.widget.CardView>
            </RelativeLayout>
        </LinearLayout>

        <Button
            android:id="@+id/btn_add"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/Llayout_curr_page_add"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="35dp"
            android:backgroundTint="@color/color_primary"
            android:fontFamily="@font/poppins_semibold"
            android:paddingLeft="35dp"
            android:paddingTop="8dp"
            android:paddingRight="35dp"
            android:paddingBottom="5dp"
            android:text="@string/btn_add"
            android:textColor="@color/bgr_color"
            android:textSize="16sp" />
    </RelativeLayout>


</androidx.constraintlayout.widget.ConstraintLayout>