<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UpdateBookActivity">


    <androidx.cardview.widget.CardView
        android:id="@+id/cardView_update"
        android:layout_width="356dp"
        android:layout_height="505dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="30dp"

        app:cardBackgroundColor="@color/fragment_bgr_color"
        app:cardCornerRadius="13dp" >


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:paddingLeft="30dp"
                android:paddingTop="30dp"
                android:paddingRight="30dp"
                android:paddingBottom="23dp">

                <RelativeLayout
                    android:id="@+id/frag_Rlayout_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/frag_tv_title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/poppins_semibold"
                        android:text="@string/tv_title"
                        android:textColor="@color/fragment_text_color"
                        android:textSize="25sp" />

                    <TextView
                        android:id="@+id/frag_tv_title_content"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/frag_tv_title"
                        android:fontFamily="@font/poppins_semibold"
                        android:text="@string/book_title"
                        android:textColor="@color/color_primary"
                        android:textSize="32sp" />

                </RelativeLayout>

                <LinearLayout
                    android:id="@+id/frag_Llayout_status"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/frag_Rlayout_title"
                    android:layout_marginTop="25dp"
                    android:weightSum="3">

                    <TextView
                        android:id="@+id/frag_tv_status"
                        android:layout_width="103dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_weight="1"
                        android:fontFamily="@font/poppins_semibold"
                        android:text="@string/tv_status"
                        android:textColor="@color/fragment_text_color"
                        android:textSize="25sp" />

                    <Spinner
                        android:id="@+id/spinner2"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_weight="2"
                        android:background="@color/bgr_color"
                        android:entries="@array/status"
                        android:spinnerMode="dropdown"
                        android:theme="@style/SpinnerTheme" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/frag_Llayout_curr_page"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/frag_Llayout_status"
                    android:layout_marginTop="25dp"
                    android:weightSum="2">

                    <TextView
                        android:id="@+id/frag_tv_curr_page"
                        android:layout_width="184dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_weight="1"
                        android:fontFamily="@font/poppins_semibold"
                        android:text="@string/tv_curr_page"
                        android:textColor="@color/fragment_text_color"
                        android:textSize="25sp" />

                    <RelativeLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:paddingTop="5dp">

                        <androidx.cardview.widget.CardView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:backgroundTint="@color/bgr_color">

                            <EditText
                                android:id="@+id/tv_status1"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:fontFamily="@font/poppins_medium"
                                android:gravity="center"
                                android:inputType="number"
                                android:paddingLeft="30dp"
                                android:paddingTop="7dp"
                                android:paddingRight="30dp"
                                android:paddingBottom="5dp"
                                android:text="@string/tv_ex_curr_pages"
                                android:textColor="@color/color_primary"
                                android:textSize="22sp" />
                        </androidx.cardview.widget.CardView>
                    </RelativeLayout>
                </LinearLayout>

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_below="@+id/frag_Llayout_curr_page"
                    android:layout_marginTop="22dp"
                    app:cardCornerRadius="20dp">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="206dp"
                        android:padding="15dp">

                        <TextView
                            android:id="@+id/tv_note"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="12dp"
                            android:fontFamily="@font/poppins_semibold"
                            android:paddingLeft="3dp"
                            android:paddingRight="3dp"
                            android:text="@string/tv_note"
                            android:textColor="@color/fragment_text_color"
                            android:textSize="25sp" />

                        <ScrollView
                            android:id="@+id/scroll_view_note"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_below="@id/tv_note">

                            <EditText
                                android:id="@+id/tv_note_content"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_below="@+id/tv_note"
                                android:layout_marginLeft="12dp"
                                android:layout_marginTop="5dp"
                                android:layout_marginRight="12dp"
                                android:layout_marginBottom="5dp"
                                android:fontFamily="@font/poppins_regular"
                                android:hint="Type your note"
                                android:text="Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet."
                                android:textColor="@color/color_primary"
                                android:textSize="20sp" />
                        </ScrollView>
                    </RelativeLayout>
                </androidx.cardview.widget.CardView>
            </RelativeLayout>


    </androidx.cardview.widget.CardView>

    <Button
        android:id="@+id/btn_update"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/cardView_update"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="15dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="15dp"
        android:layout_marginEnd="15dp"
        android:layout_weight="1"
        android:backgroundTint="@color/color_primary"
        android:fontFamily="@font/poppins_semibold"
        android:paddingLeft="15dp"
        android:paddingTop="8dp"
        android:paddingRight="15dp"
        android:paddingBottom="8dp"
        android:text="@string/btn_update"
        android:textColor="@color/bgr_color"
        android:textSize="16sp" />


</RelativeLayout>